[package]
name = "synthviz"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
audioviz = { version = "0.5.0", default-features = false, features = ["std", "spectrum"] }
log = "0.4.19"
pixels = "0.13.0"
rfd = "0.11.4"
symphonia = { version = "0.5.3", features = ["all-codecs"] }
tiny-skia = "0.11.1"
winit = "0.28.6"
winit_input_helper = "0.14.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
